--- a/style.css
+++ b/style.css
@@ -1035,15 +1035,9 @@ body {
 }
 
 .testimonial img {
-    max-width: 100%;
-    max-height: 100%;
+    max-width: 55px;
 }
 
-/* .testimonial img {
-    width: 500px;
-    height: 3000px;
-}
- */
 .testimonial small {
     margin-top: 7px;
     font-size: 16px;
